[gd_scene load_steps=9 format=3 uid="uid://c5gop5y7jt6pa"]

[ext_resource type="FontFile" uid="uid://bf71mrsd5tovc" path="res://Assets/Staatliches/Staatliches-Regular.ttf" id="1_as4l2"]
[ext_resource type="Script" path="res://Player/win_game_menu.gd" id="2_3ja1q"]
[ext_resource type="Shader" uid="uid://cjfrcfye7o7tl" path="res://Player/game_over_menu.tres" id="3_uxh48"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sav8q"]

[sub_resource type="Theme" id="Theme_ij1jw"]
default_font = ExtResource("1_as4l2")
default_font_size = 64

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nqrl0"]
shader = ExtResource("3_uxh48")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_41lns"]

[sub_resource type="LabelSettings" id="LabelSettings_swn8o"]
font_size = 76
font_color = Color(0.317647, 0.396078, 0.396078, 1)

[node name="WinGameMenu" type="Control"]
material = SubResource("CanvasItemMaterial_sav8q")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ij1jw")
script = ExtResource("2_3ja1q")

[node name="BackgroundBlur" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_nqrl0")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_41lns")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU ESCAPED"
label_settings = SubResource("LabelSettings_swn8o")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "IM DONE"

[node name="Sandbox" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "SANDBOX"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Sandbox" to="." method="_on_sandbox_button_pressed"]
